# fmath

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md
src/: hexadecimal.rs  lib.rs
src/color/: hsv.rs  mod.rs  rgb.rs  rgb8.rs
src/functions/: angles.rs  hexadecimal.rs  mod.rs
src/matrix/: matrix4x4.rs  mod.rs
src/structs/: angle_axis.rs  mod.rs  quaternion.rs  transform.rs
src/structs/color/: hsv.rs  mod.rs  rgb.rs
src/structs/matrix/: matrix3x3.rs  matrix4x4.rs  mod.rs
src/structs/vector/: mod.rs  vector2.rs  vector3.rs  vector4.rs
src/types/: mod.rs  quaternion.rs
src/types/color/: hsv.rs  mod.rs  rgb.rs  rgb8.rs  rgba.rs  rgba8.rs
src/types/matrix/: matrix4x4.rs  mod.rs
src/types/vector/: mod.rs  vector2.rs  vector3.rs  vector4.rs
src/vector/: mod.rs  vector2.rs  vector3.rs  vector4.rs
