[package]
name = "fmath"
version = "0.2.5"
edition = "2021"
authors = ["Alicia <smushybusiness@gmail.com>"]
description = "A math library for my personal projects"
readme = "README.md"
homepage = "https://github.com/smushy64/fmath"
repository = "https://github.com/smushy64/fmath"
license = "MIT-0"
keywords = ["math"]
categories = ["mathematics", "data-structures", "game-development"]